Add simple structure for key service

--- a/shared/deploy/scripts/docker-compose.dev.yml
+++ b/shared/deploy/scripts/docker-compose.dev.yml
@@ -29,8 +29,30 @@ services:
       - '../../../go/src/keys:/go/src/keys'
     networks:
       - traefik-net
+      - unthicc-net
 
+  mongo:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+      - unthicc-net
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+    networks:
+      - unthicc-net
 
 networks:
+  unthicc-net:
+    name: unthicc-net
   traefik-net:
     name: traefik-net
