--- a/go/src/keys/Gopkg.toml
+++ b/go/src/keys/Gopkg.toml
@@ -40,3 +40,7 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.3.1"
+
+[[constraint]]
+  name = "go.mongodb.org/mongo-driver"
+  version = "0.3.0"
