Update and cleanup key repo

--- a/go/src/keys/modd.conf
+++ b/go/src/keys/modd.conf
@@ -1,6 +1,6 @@
 **/*.go {
-    prep: go build
-	daemon +sigterm: ./keys
+    prep: go build -o ./build/keys
+	daemon +sigterm: ./build/keys
 }
 
 # **/*.go {
